k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travel-api
  namespace: travel

spec:
  replicas: 2

  selector:
    matchLabels:
      app: travel-api

  template:
    metadata:
      labels:
        app: travel-api

    spec:
      serviceAccountName: travel-api-sa

      containers:
        - name: travel-api
          image: 782913119640.dkr.ecr.ap-northeast-2.amazonaws.com/ai-travel-backend:manual-3c0f892-20260922-0255

          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 18

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"

            limits:
              cpu: "1000m"
              memory: "1Gi"
